--- a/public/css/main.css
+++ b/public/css/main.css
@@ -186,7 +186,7 @@ section {
 .portofolio {
     color: var(--tertiary-color);
 }
-.page-6 {
+.testimonial {
     color: var(--tertiary-color);
 }
 .owl-nav {
