--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,9 +110,6 @@ section {
     color: #fff;
     opacity: 0;
 }
-.nav-home .navbar-brand {
-    color: #fff;
-}
 
 
 /* Change navbar styling on scroll */
@@ -122,19 +119,19 @@ section {
 }
 
 .nav-home.active .nav-link {
-    color: #555;
+    color: var(--tertiary-color);
     opacity: 100;
 
 }
 
 .nav-home.active .nav-link:hover,
 .nav-home.active .nav-link:focus {
-    color: #555;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
 .nav-home.active .navbar-brand {
-    color: #555;
+    color: var(--tertiary-color);
     opacity: 100;
 
 }
@@ -147,7 +144,7 @@ section {
     }
 
     .nav-home .navbar-brand, .navbar .nav-link {
-        color: #555;
+        color: var(--tertiary-color);
     }
 }
 @media (max-width: 600px) {
@@ -159,7 +156,6 @@ section {
         opacity: 0;
     }
     .nav-home .navbar-brand {
-        color: var(--tertiary-color);
         opacity: 0;
     }
     .nav-home.active {
@@ -186,7 +182,7 @@ section {
 
 .nav-page .nav-link:hover,
 .nav-page .nav-link:focus {
-    color: #fff;
+    color: var(--tertiary-color);
     text-decoration: none;
 }
 
@@ -202,13 +198,13 @@ section {
 }
 
 .nav-page.active .nav-link {
-    color: #555;
+    color: var(--tertiary-color);
 
 }
 
 .nav-page.active .nav-link:hover,
 .nav-page.active .nav-link:focus {
-    color: #555;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
@@ -224,8 +220,8 @@ section {
         background: #fff;
     }
 
-    .nav-page .navbar-brand, .navbar .nav-link {
-        color: #555;
+    .nav-page .navbar-brand, .nav-page .nav-link {
+        color: var(--tertiary-color);
     }
 }
 @media (max-width: 600px) {
